@@ -51,17 +51,14 @@ public class TextUtils {
 
         Matcher m = Regex.MENTION_PATTERN.matcher(tweet);
         while (m.find()) {
-            Log.v("talon_text", "Found: " + m.group(0));
             finish = changeText(finish, m.group(0), color);
         }
         m = Regex.HASHTAG_PATTERN.matcher(tweet);
         while (m.find()) {
-            Log.v("talon_text", "Found: " + m.group(0));
             finish = changeText(finish, m.group(0), color);
         }
         m = Patterns.WEB_URL.matcher(tweet);
         while (m.find()) {
-            Log.v("talon_text", "Found: " + m.group(0));
             finish = changeText(finish, m.group(0), color);
         }
 
