@@ -6,6 +6,7 @@
     &#8226; Smaller search icon on the search pages<br/>
     &#8226; Weird action bar icons on some drawer pages<br/>
     &#8226; Improved startup speed and efficiency<br/>
+    &#8226; Match international characters when highlighting hashtags<br/>
 </br><br/>
 
 <b>Version 2.0.0 Beta 1:</b><br/><br/>
